--- a/src/includes/header.html
+++ b/src/includes/header.html
@@ -28,6 +28,7 @@
       <div class="right_block">
         <ul>
           <li><a href="#" class="nav_link">Доставка и оплата</a></li>
+          <li><a href="#" class="nav_link">Сертификаты</a></li>
           <li><a class="all_menu nav_link" href="#"><img src="img/icons/svg/menu.svg" alt="">Все меню</a></li>
         </ul>
       </div>
