main page compleet

--- a/src/includes/header.html
+++ b/src/includes/header.html
@@ -6,7 +6,7 @@
           <li><a href="#">.by</a></li>
           <li class="current"><a href="#">.ru</a></li>
         </ul>
-        <div class="phone"><a href="#">+375 (29) 689-14-56</a></div>
+        <div class="phone"><a href="tel:+375296891456">+375 (29) 689-14-56</a></div>
         <div class="working_hours">с 8-30 до 17-00, Пн-Пт</div>
       </div>
       <div class="right_block">
@@ -19,7 +19,7 @@
     <div class="header_bottom">
       <div class="left_block">
         <ul class="marker">
-          <li><a href="#" class="nav_link">Женщинам</a></li>
+          <li><a href="#" class="nav_link current">Женщинам</a></li>
           <li><a href="#" class="nav_link">Мужчинам</a></li>
           <li><a href="#" class="nav_link">Новинки</a></li>
           <li><a href="#" class="nav_link">Распродажа</a></li>
@@ -29,7 +29,7 @@
         <ul>
           <li><a href="#" class="nav_link">Доставка и оплата</a></li>
           <li><a href="#" class="nav_link">Сертификаты</a></li>
-          <li><a class="all_menu nav_link" href="#"><img src="img/icons/svg/menu.svg" alt="">Все меню</a></li>
+          <li><a class="all_menu nav_link js-toggle-menu" href="#"><img src="img/icons/svg/menu.svg" alt="">Все меню</a></li>
         </ul>
       </div>
     </div>
