--- a/src/sass/screen.scss
+++ b/src/sass/screen.scss
@@ -2,5 +2,7 @@
 @import "lib/base";
 @import "lib/slick";
 @import "lib/slick-theme";
+@import "lib/mediaelementplayer.min";
+@import "lib/mediaelementplayer-legacy.min";
 @import "common";
 @import "lib/media";
