catalog page full

--- a/src/includes/header.html
+++ b/src/includes/header.html
@@ -19,7 +19,7 @@
     <div class="header_bottom">
       <div class="left_block">
         <ul class="marker">
-          <li><a href="#" class="nav_link current">Женщинам</a></li>
+          <li><a href="#" class="nav_link">Женщинам</a></li>
           <li><a href="#" class="nav_link">Мужчинам</a></li>
           <li><a href="#" class="nav_link">Новинки</a></li>
           <li><a href="#" class="nav_link">Распродажа</a></li>
