--- a/src/sass/screen.scss
+++ b/src/sass/screen.scss
@@ -4,5 +4,6 @@
 @import "lib/slick-theme";
 @import "lib/mediaelementplayer.min";
 @import "lib/mediaelementplayer-legacy.min";
+@import "lib/select2.min";
 @import "common";
 @import "lib/media";
