--- a/src/sass/screen.scss
+++ b/src/sass/screen.scss
@@ -5,5 +5,6 @@
 @import "lib/mediaelementplayer.min";
 @import "lib/mediaelementplayer-legacy.min";
 @import "lib/select2.min";
+@import "lib/jquery.bxslider.min";
 @import "common";
 @import "lib/media";
